[project]
name = "survey-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyogrio>=0.12.1",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
]
